# two-scale-mechanics

./: .gitignore  .pre-commit-config.yaml  README.md  SuperMUC-NG-Notes.md  build_micro_manager.sh  build_precice.sh  build_precice_v2.5.0.sh  build_precice_v3.sh  clean-all.sh  clean_all.sh  clean_case.sh  precice-config-fans-large-strain.xml  precice-config-fans-small-strain.xml  precice-config-for-fans.xml  precice-config-for-nasmat.xml  precice-config-nasmat-scaling.xml  precice-config.xml  submit_job.sbat  submit_job_abaqus_abaqus.sbat  submit_job_abaqus_nasmat.sbat  submit_job_macro_micro.sbat  submit_job_nasmat_nasmat_dummy.sh
build_scripts/: build_micro_manager.sh  build_precice_v3_with_Intel_MPI.sh  build_precice_v3_without_MPI.sh
fenics-fans-scripts/: README.md
job_submission_scripts/: submit_job_abaqus_abaqus.sbat  submit_job_nasmat_nasmat_dummy.sh
laminate_macro/: Crossply_macro.cae  Crossply_macro.inp  VEXTERNALDB.f  VUMAT.f  clean.sh  submit_job.sbat
macro_laminate/: Crossply_macro.jnl  Crossply_macro_18elements.cae  Crossply_macro_18elements.inp  USER.f  VEXTERNALDB.f  VEXTERNALDB_AND_VUMAT.f  VUMAT.f  clean.sh  submit_job.sbat
meso-abaqus-crossply/: Crossply_meso_100elements.inp  Crossply_meso_18elements.inp  VEXTERNALDB_AND_VUMAT.f  VUMAT.f  VUMAT_ORIGINAL.f  get_strains.f
meso-ccx-notch/: config_for_fans.yml  config_for_nasmat.yml  notch.inp  notch.msh  run.sh
meso-ccx-single-element/: AbqTest1.inp  one_element.inp
meso-dummy/: dummy.py
meso-fenics/: README.md  clean.sh  requirements.txt  run.sh
meso_abaqus/: submit_single_phyiscs_case.sbat
meso_abaqus_notch/: notch_mesh.inp  run.sh
micro_FANS/python/: CMakeLists.txt  micro.cpp  micro.hpp  micro_thermal.cpp  micro_thermal.hpp
(+369 files in other folders)
